--- a/assets/pizza.css
+++ b/assets/pizza.css
@@ -33,3 +33,12 @@ header li {
 .w-100 {
   width:100%;
 }
+
+h2{
+  text-align: center;
+}
+
+.container{
+  display: flex;
+  justify-content: space-around;
+}
